Able to send a file to S3 from a form on the landing page. Using Amazon gem to generate form

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -4,6 +4,7 @@
   <title>Sugarsnap</title>
   <%= stylesheet_link_tag    "application", :media => "all" %>
   <%= javascript_include_tag "application" %>
+  <script src='https://sdk.amazonaws.com/js/aws-sdk-2.0.0-rc10.min.js'></script>
   <%= csrf_meta_tags %>
 </head>
 <body>
