--- a/app/assets/stylesheets/sugarsnap.css.scss
+++ b/app/assets/stylesheets/sugarsnap.css.scss
@@ -9,6 +9,8 @@
   .form-container { border: solid green; text-align: center; margin-left: auto; margin-right: auto; }
   .feed { text-align: center; margin-left: auto; margin-right: auto; }
   .feed-pic { border: solid green; }
+  #footer { height: 10%; margin: 0px 0px; margin-top: -10px; background: green; padding-top: 10px; padding-bottom: 10px; text-align: center; }
+  #p-foot   { font-size: .75em; margin: 0px 0px; font-size: 16px; color: lightgreen; }
 }
 @media screen and (min-width: 541px) {
   body { background: lightgreen; }
@@ -21,4 +23,6 @@
   .form-container { border: solid green; text-align: center; margin-left: auto; margin-right: auto; }
   .feed { text-align: center; margin-left: auto; margin-right: auto; }
   .feed-pic { border: solid green; }
+  #footer { height: 10%; margin: 0px 0px; margin-top: -10px; background: green; padding-top: 10px; padding-bottom: 10px; text-align: center; }
+  #p-foot   { font-size: .75em; margin: 0px 0px; font-size: 16px; color: lightgreen; }
 }
