--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -22,28 +22,12 @@
 </div>
 
 <div class='container'>
-  <img href="https://s3-us-west-1.amazonaws.com/sugarsnapper/images/" class='feed-pic'><br>
-  <img href="https://s3-us-west-1.amazonaws.com/sugarsnapper/images/" class='feed-pic'><br>
-  <img href="https://s3-us-west-1.amazonaws.com/sugarsnapper/images/" class='feed-pic'><br>
-  <img href="https://s3-us-west-1.amazonaws.com/sugarsnapper/images/" class='feed-pic'><br>
-  <img href="https://s3-us-west-1.amazonaws.com/sugarsnapper/images/" class='feed-pic'><br>
-  <img href="https://s3-us-west-1.amazonaws.com/sugarsnapper/images/" class='feed-pic'><br>
-  <img href="https://s3-us-west-1.amazonaws.com/sugarsnapper/images/" class='feed-pic'><br>
-  <img href="https://s3-us-west-1.amazonaws.com/sugarsnapper/images/" class='feed-pic'><br>
-  <img href="https://s3-us-west-1.amazonaws.com/sugarsnapper/images/" class='feed-pic'><br>
-  <img href="https://s3-us-west-1.amazonaws.com/sugarsnapper/images/" class='feed-pic'><br>
-  <img href="https://s3-us-west-1.amazonaws.com/sugarsnapper/images/" class='feed-pic'><br>
-  <img href="https://s3-us-west-1.amazonaws.com/sugarsnapper/images/" class='feed-pic'><br>
-  <img href="https://s3-us-west-1.amazonaws.com/sugarsnapper/images/" class='feed-pic'><br>
-  <img href="https://s3-us-west-1.amazonaws.com/sugarsnapper/images/" class='feed-pic'><br>
-  <img href="https://s3-us-west-1.amazonaws.com/sugarsnapper/images/" class='feed-pic'><br>
-  <img href="https://s3-us-west-1.amazonaws.com/sugarsnapper/images/" class='feed-pic'><br>
-  <img href="https://s3-us-west-1.amazonaws.com/sugarsnapper/images/" class='feed-pic'><br>
-  <img href="https://s3-us-west-1.amazonaws.com/sugarsnapper/images/" class='feed-pic'><br>
-  <img href="https://s3-us-west-1.amazonaws.com/sugarsnapper/images/" class='feed-pic'><br>
-  <img href="https://s3-us-west-1.amazonaws.com/sugarsnapper/images/" class='feed-pic'><br>
-  <img href="https://s3-us-west-1.amazonaws.com/sugarsnapper/images/" class='feed-pic'><br>
+  <img href="https://console.aws.amazon.com/s3/home?region=us-west-1#" class='feed-pic'><br>
   <img href="https://s3-us-west-1.amazonaws.com/sugarsnapper/images/" class='feed-pic'><br>
   <img href="https://s3-us-west-1.amazonaws.com/sugarsnapper/images/" class='feed-pic'><br>
   <img href="https://s3-us-west-1.amazonaws.com/sugarsnapper/images/" class='feed-pic'><br>
 </div>
+
+<div id="footer">
+      <p id="p-foot">Creators:   <span id="bold">Dave</span>,   <span id="bold">Nick</span>,   and   <span id="bold">Rex</span><br> Source: <a href="https://github.com/pocket-gophers-2014/sugarsnap">Github Project Repo</a></p>
+    </div>
