--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,10 +1,8 @@
 <%= @sugarsnap %>
 <div id='feed'></div>
 
-<form action='http://sugarsnapper.s3.amazonaws.com/' method='post' enctype='multipart/form-data'>
-<% @form.fields.map do |(name, value)| %>
-  <input type="hidden" name="<%= name %>" value="<%= value %>">
-<% end %>
+<form id='post-photo' action='http://sugarsnapper.s3.amazonaws.com/' method='post' enctype='multipart/form-data'>
+
 File to upload to S3:
     <input type='file' name='file' id='photo-snapper' accept='image/*' capture='camera'>
     <br>
