--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,10 +1,8 @@
 <%= @sugarsnap %>
 <div id='feed'></div>
 
-<form id='post-photo' action='http://sugarsnapper.s3.amazonaws.com/' method='post' enctype='multipart/form-data'>
 
-File to upload to S3:
-    <input type='file' name='file' id='photo-snapper' accept='image/*' capture='camera'>
-    <br>
-    <input type='submit' value='Submit this file'>
-</form>
+<%= form_for @photo, remote: true, id: 'post-photo' do |t| %>
+  <%= t.file_field :image, accept: 'image/*', capture: 'camera' %>
+  <%= t.submit %>
+<% end %>
