Functional feed:  * Uploaded photos now display on our landing page.  * SCSS file includes hidden class styles for display none property.  * Img template included in the home.html.erb template   * Home.html.erb template removed filler photo templates   * Something odd happene with ImageMagick

--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -16,20 +16,8 @@
 <div class='feed-container'>
   <p>Feed goes here; below is just an imitation:</p>
   <div id='feed'>
+    <img class="hidden">
   </div>
-</div>
-
-<div class='container'>
-  <img href="https://console.aws.amazon.com/s3/home?region=us-west-1#" class='feed-pic'><br>
-  <img href="https://s3-us-west-1.amazonaws.com/sugarsnapper/images/" class='feed-pic'><br>
-  <img href="https://s3-us-west-1.amazonaws.com/sugarsnapper/images/" class='feed-pic'><br>
-  <img href="https://s3-us-west-1.amazonaws.com/sugarsnapper/images/" class='feed-pic'><br>
-  <img href="https://s3-us-west-1.amazonaws.com/sugarsnapper/images/" class='feed-pic'><br>
-  <img href="https://s3-us-west-1.amazonaws.com/sugarsnapper/images/" class='feed-pic'><br>
-  <img href="https://s3-us-west-1.amazonaws.com/sugarsnapper/images/" class='feed-pic'><br>
-  <img href="https://s3-us-west-1.amazonaws.com/sugarsnapper/images/" class='feed-pic'><br>
-  <img href="https://s3-us-west-1.amazonaws.com/sugarsnapper/images/" class='feed-pic'><br>
-  <img href="https://s3-us-west-1.amazonaws.com/sugarsnapper/images/" class='feed-pic'><br>
 </div>
 
 <div id="footer">
