--- a/app/assets/stylesheets/sugarsnap.css.scss
+++ b/app/assets/stylesheets/sugarsnap.css.scss
@@ -10,6 +10,8 @@ $brown3: #FF9D00;
 $brown4: #E89C00;
 $brown5: #FFB900;
 
+.hidden { display: none; }
+
 body {
   background-image: linear-gradient(to right, $brown1, $brown2, $brown3, $brown4);
 }
