added meta tag for viewport and device width

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -2,6 +2,7 @@
 <html>
 <head>
   <title>Sugarsnap</title>
+  <meta name="viewport" content="width=device-width">
   <script src='https://cdn.firebase.com/js/client/1.0.15/firebase.js'></script>
   <%= stylesheet_link_tag    "application", :media => "all" %>
   <%= javascript_include_tag "application" %>
