refactored views methods to append and prepend photos

--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,7 +1,7 @@
 <header>
   <ul>
     <li><img src="sugar_snap.png" class='header-logo'></li>
-    <li class='nav-content'><span id="span"><%= @sugarsnap %></span></li>
+    <li class='nav-content'><span id="span">Sugarsnap</span></li>
   </ul>
 </header>
 
