--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,16 +1,7 @@
 <header>
-  <ul>
-    <li><img src="sugar_snap.png" class='header-logo'></li>
-    <li class='nav-content'><span id="span">Sugarsnap</span></li>
-  </ul>
+  <h1>Sugarsnap</h1>
 </header>
 
-<div class='form-container'>
-  <%= form_for @photo do |f| %>
-  <%= f.file_field :image, accept: 'image/*', capture: 'camera' %>
-  <%= f.submit "Submit", id: "submit_photo" %>
-<% end %>
-</div>
 
 <div class='feed-container'>
   <div id='feed'>
@@ -18,7 +9,13 @@
   </div>
 </div>
 
-<div id="footer">
-      <p id="p-foot">Creators:   <span id="bold">Dave</span>,  <span id="bold">Robert</span>,   <span id="bold">Nick</span>,   and   <span id="bold">Rex</span><br> Source: <a href="https://github.com/pocket-gophers-2014/sugarsnap">Github Project Repo</a></p>
-    </div>
+<footer>
+  <div class='form-container'>
+    <%= form_for @photo do |f| %>
+    <%= f.file_field :image, accept: 'image/*', id: "photo_image", capture: 'camera' %>
+    <img src='icon-camera-128.png' id='camera-icon'>
+    <%= f.submit "Submit", id: "submit_photo" %>
+  <% end %>
+  </div>
+</footer>
 
