let there be submission icons

--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -15,6 +15,7 @@
     <%= f.file_field :image, accept: 'image/*', id: "photo_image", capture: 'camera' %>
     <img src='icon-camera-128.png' id='camera-icon'>
     <%= f.submit "Submit", id: "submit_photo" %>
+    <img src='cloud_arrow_up.png' id='cloud_icon'>
   <% end %>
   </div>
 </footer>
