--- a/app/assets/stylesheets/sugarsnap.css.scss
+++ b/app/assets/stylesheets/sugarsnap.css.scss
@@ -1,10 +1,11 @@
+$shittygreen: #85E085;
 .hidden { display: none; }
 
-#submit_photo { display: none; }
+
 
 header {
   margin: none;
-  background: green;
+  background: #85E085;
   padding: none;
   position: fixed;
   top: 0px;
@@ -18,14 +19,22 @@ header {
 
 
 
-img { height: 320px; width: 320px; text-align: center; }
+img {
+  height: 320px;
+  width: 320px;
+  text-align: center;
+}
+
+
 .feed-container {
   text-align: center;
   margin-top: 100px;
   margin-bottom: 110px;
   margin-left: auto;
   margin-right: auto;
-  }
+}
+
+
 
 .form-container {
   text-align: center;
@@ -36,12 +45,14 @@ img { height: 320px; width: 320px; text-align: center; }
   position: relative;
 }
 
+
+
 .feed {
   text-align: center;
   margin-left: auto;
   margin-right: auto;
 }
-.feed-pic { border: solid black; }
+
 
 
 footer {
@@ -51,20 +62,18 @@ footer {
   bottom: 0px;
   height: 100px;
   width: 100%;
-  background: green;
+  background: #85E085;
   margin: 0;
   padding: 0;
-  text-align: center;}
-
-#photo_image {
-  opactiy: 0;
-  width: 90px;
+  text-align: center;
 }
 
-input[type="file"]{
+
+
+input[type="file"] {
   height: 100px;
   width: 100px;
-  opacity: 0.5;
+  opacity: 0;
   position: absolute;
   z-index: 1;
   bottom: 0px;
@@ -74,12 +83,13 @@ input[type="file"]{
   @media (min-width: 981px) {
     height: 100px;
     width: 100px;
-    opacity: 0.5;
+    opacity: 0;
     bottom: 0px;
     left: 47.7%;
     right: 47.7%;
   }
 }
+
 
 #camera-icon {
   width: 90px;
@@ -105,6 +115,57 @@ input[type="file"]{
   }
 }
 
+
+#camera_icon_left {
+  width: 90px;
+  height: 90px;
+  border: solid 2px black;
+  border-radius: 20px;
+  position: absolute;
+  z-index: 0;
+  bottom: 0px;
+  left: 21%;
+  right: 21%;
+  margin-bottom: 3px;
+
+  @media (min-width: 981px) {
+    width: 90px;
+    height: 90px;
+    border: solid 2px black;
+    border-radius: 20px;
+    bottom: 0px;
+    left: 47.6%;
+    right: 47.6%;
+    margin-bottom: 3px;
+  }
+}
+
+
+
+#submit_photo {
+  display: none;
+  opacity: 0;
+  height: 100px;
+  width: 100px;
+  position: absolute;
+  z-index: 1;
+  bottom: 0px;
+  left: 55%;
+}
+
+#cloud_icon {
+  display: none;
+  width: 74px;
+  height: 74px;
+  border: solid 2px black;
+  border-radius: 20px;
+  position: absolute;
+  padding: 8px;
+  z-index: 0;
+  bottom: 0px;
+  left: 55%;
+  margin-bottom: 3px;
+}
 
 @media screen and (max-width: 540px) {}
 @media screen and (min-width: 541px) {}
