--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,8 +1,9 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>Sugarsnap</title>
+  <title>sugarsnap</title>
   <meta name="viewport" content="width=device-width">
+  <link href='http://fonts.googleapis.com/css?family=Miltonian+Tattoo' rel='stylesheet' type='text/css'>
   <script src='https://cdn.firebase.com/js/client/1.0.15/firebase.js'></script>
   <%= stylesheet_link_tag    "application", :media => "all" %>
   <%= javascript_include_tag "application" %>
