--- a/app/assets/stylesheets/sugarsnap.css.scss
+++ b/app/assets/stylesheets/sugarsnap.css.scss
@@ -35,7 +35,7 @@ img {
   height: 320px;
   width: 320px;
   text-align: center;
-  margin: 5px;
+  margin: 25px;
 }
 
 
@@ -56,6 +56,7 @@ img {
   margin-left: auto;
   margin-right: auto;
   position: relative;
+  max-width: 1000px;
 }
 
 
@@ -64,6 +65,7 @@ img {
   text-align: center;
   margin-left: auto;
   margin-right: auto;
+  max-width: 1000px;
 }
 
 
