--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,7 +1,11 @@
 <header>
-  <h1>sugarsnap.</h1>
+  <div id="header">
+    <h1>sugarsnap.</h1>
+  </div>
+  <div id="subheader">
+    <p>98.782715618819% test coverage!!<br>human integration testing throughout soma<br>yoooooo</p>
+  </div>
 </header>
-
 
 <div class='feed-container'>
   <div id='feed'>
