some rudimentary styling on the about subheader

--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -3,7 +3,7 @@
     <h1>sugarsnap.</h1>
   </div>
   <div id="subheader">
-    <p>98.782715618819% test coverage!!<br>human integration testing throughout soma<br>yoooooo</p>
+    <p>Share photos and see what is around you with Sugarsnap. Track photos in places you've visited automatically</p>
   </div>
 </header>
 
