--- a/app/assets/stylesheets/sugarsnap.css.scss
+++ b/app/assets/stylesheets/sugarsnap.css.scss
@@ -8,15 +8,12 @@ body {
 h1 {
   font-family: 'Miltonian Tattoo', cursive;
   font-size: 40px;
-  margin-top: -5px;
-  margin-bottom: 5px;
-  padding: none;
+  margin-top: 0px;
+  margin-bottom: 0px;
+  padding: 0px;
   }
 
-#header {
-  margin: none;
-  background: #85E085;
-  height: 50px;
+header {
   margin: none;
   padding: none;
   position: fixed;
@@ -25,11 +22,27 @@ h1 {
   width: 100%;
   display: block;
   clear: both;
+}
+
+#header {
+  margin: 0px;
+  background: #85E085;
+  height: 50px;
+  padding: none;
+  padding-bottom: 5px;
+  top: 0px;
+  left: 0px;
+  width: 100%;
+  display: block;
   text-align: center;
 }
 
 p {
   text-align: center;
+  font-family: 'Miltonian Tattoo', cursive;
+  margin: none;
+  padding: none;
+  padding-top: 12px;
 }
 
 
@@ -45,8 +58,8 @@ img {
 
 #subheader {
   margin: none;
+  margin-top: -16px;
   padding: none;
-  margin-top: 50px;
   background: #C8FFC8;
   width: 100%;
   height: 50px;
