--- a/app/assets/stylesheets/sugarsnap.css.scss
+++ b/app/assets/stylesheets/sugarsnap.css.scss
@@ -123,21 +123,21 @@ footer {
 
 input[type="file"] {
   height: 80px;
-  width: 45px;
-  opacity: 0;
+  width: 46px;
+  opacity: 0.5;
   position: absolute;
   z-index: 1;
   bottom: 0px;
-  left: 181px;
+  left: 140px;
   top: 0px;
   @media (min-width: 450px) {
-    left: 206px;
+    left: 208px;
   }
   @media (min-width: 600px) {
-    left: 300px;
+    left: 302px;
   }
   @media (min-width: 755px) {
-    left: 47.6%;
+    left: 47.8%;
   }
   @media (min-width: 981px) {
     height: 100px;
@@ -154,7 +154,7 @@ input[type="file"] {
   position: absolute;
   z-index: 0;
   top: 0px;
-  left: 180px;
+  left: 140px;
   margin-bottom: 3px;
   margin-top: 3px;
   @media (min-width: 450px) {
@@ -178,13 +178,13 @@ input[type="file"] {
 
 #submit_photo {
   display: none;
-  opacity: 0;
+  opacity: .5;
   height: 46px;
   width: 48px;
   position: absolute;
   z-index: 1;
   bottom: 52px;
-  left: 130px;
+  left: 89px;
   margin:0px;
   padding:0px;
   @media (min-width: 450px) {
@@ -213,7 +213,7 @@ input[type="file"] {
   padding: 3px;
   z-index: 0;
   top: 0px;
-  left: 132px;
+  left: 92px;
   margin-bottom: 3px;
   margin-top: 3px;
   @media (min-width: 450px) {
