--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,3 +1,4 @@
+<div id='sugarsnap'>
 <header>
   <div id="header">
     <h1>sugarsnap.</h1>
@@ -23,4 +24,4 @@
   <% end %>
   </div>
 </footer>
-
+</div>
