--- a/app/assets/stylesheets/sugarsnap.css.scss
+++ b/app/assets/stylesheets/sugarsnap.css.scss
@@ -1,6 +1,12 @@
 $snappygreen: #85E085;
 .hidden { display: none; }
 
+
+html, body {
+  height: 100%;
+  width: 100%;
+}
+
 body {
   background: url("http://subtlepatterns.com/patterns/sativa.png") repeat;
 }
@@ -95,13 +101,6 @@ img {
   margin-left: auto;
   margin-right: auto;
   position: relative;
-  max-width: 1000px;
-}
-
-.feed {
-  text-align: center;
-  margin-left: auto;
-  margin-right: auto;
   max-width: 1000px;
 }
 
@@ -232,4 +231,30 @@ input[type="file"] {
     padding: 8px;
     border-radius: 17px;
   }
+}
+
+#demo-sidescroll {
+  position: fixed;
+  top: 0;
+  left: 0;
+  height: 500px;
+  width: 100%;
+}
+
+#demo-sidescroll .feed-container {
+  height: 384px;
+  width: auto;
+  white-space: nowrap;
+  overflow-y: hidden;
+  overflow-x: scroll;
+  -webkit-overflow-scrolling: touch;
+}
+
+#demo-sidescroll #feed {
+  height: 100%;
+  width: 100%;
+}
+
+#demo-sidescroll footer {
+  position: absolute;
 }
